...
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_explanation"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/FragmentSubjectiveQuizChoiceStartButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FragmentSubjectiveQuizChoiceTopTextView">

        <CheckBox
            android:id="@+id/FragmentQuizChoiceAttitudeCheckBox"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="개발자 공통 (186문제)"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/FragmentQuizChoiceAndroidCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Android with Kotlin (461문제)"
            tools:ignore="HardcodedText" />

        <CheckBox
...
