...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.splash.SplashActivity">

    <TextView
        android:id="@+id/ActivitySplashTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Think IT!"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
