...
            tools:ignore="HardcodedText" />

    </ScrollView>


    <Button
        android:id="@+id/ActivitySubjectiveQuizShowBestAnswerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/no_jh"
        android:stateListAnimator="@null"
        android:text="모범 답안 보기"
        app:layout_constraintBottom_toBottomOf="@id/ActivitySubjectiveQuizBestAnswerView"
...
